--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
     }
 
     :root {
-      --primary-color: #2c3e50;
-      --secondary-color: #3498db;
-      --accent-color: #e74c3c;
-      --success-color: #27ae60;
-      --warning-color: #f39c12;
-      --bg-color: #ffffff;
-      --text-color: #333333;
-      --code-bg: #f4f4f4;
-      --border-color: #e0e0e0;
-      --shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      --primary-color: #64b5f6;
+      --secondary-color: #42a5f5;
+      --accent-color: #ef5350;
+      --success-color: #66bb6a;
+      --warning-color: #ffa726;
+      --bg-color: #121212;
+      --bg-secondary: #1e1e1e;
+      --bg-tertiary: #2d2d2d;
+      --text-color: #e0e0e0;
+      --text-secondary: #b0b0b0;
+      --code-bg: #1e1e1e;
+      --code-text: #d4d4d4;
+      --border-color: #3a3a3a;
+      --shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
     }
 
     body {
@@ -42,7 +46,7 @@
     }
 
     header {
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
+      background: linear-gradient(135deg, #1a237e 0%, #283593 100%);
       color: white;
       padding: 3rem 2rem;
       text-align: center;
@@ -113,6 +117,7 @@
     a:hover {
       color: var(--primary-color);
       text-decoration: underline;
+      opacity: 0.8;
     }
 
     code {
@@ -121,7 +126,7 @@
       border-radius: 3px;
       font-family: 'Courier New', monospace;
       font-size: 0.9em;
-      color: var(--accent-color);
+      color: #ce9178;
     }
 
     pre {
@@ -137,7 +142,7 @@
     pre code {
       background: none;
       padding: 0;
-      color: var(--text-color);
+      color: var(--code-text);
     }
 
     table {
@@ -150,8 +155,8 @@
     }
 
     th {
-      background-color: var(--primary-color);
-      color: white;
+      background-color: var(--bg-tertiary);
+      color: var(--primary-color);
       padding: 1rem;
       text-align: left;
       font-weight: 600;
@@ -160,14 +165,15 @@
     td {
       padding: 0.75rem 1rem;
       border-bottom: 1px solid var(--border-color);
+      background-color: var(--bg-secondary);
     }
 
     tr:last-child td {
       border-bottom: none;
     }
 
-    tr:nth-child(even) {
-      background-color: #f9f9f9;
+    tr:nth-child(even) td {
+      background-color: var(--bg-tertiary);
     }
 
     img {
@@ -177,15 +183,17 @@
       box-shadow: var(--shadow);
       margin: 1.5rem 0;
       display: block;
+      border: 1px solid var(--border-color);
     }
 
     .warning {
-      background-color: #fff3cd;
+      background-color: rgba(255, 167, 38, 0.15);
       border-left: 4px solid var(--warning-color);
       padding: 1rem;
       margin: 1.5rem 0;
       border-radius: 4px;
       box-shadow: var(--shadow);
+      color: var(--text-color);
     }
 
     .warning h3 {
@@ -194,21 +202,23 @@
     }
 
     .success {
-      background-color: #d4edda;
+      background-color: rgba(102, 187, 106, 0.15);
       border-left: 4px solid var(--success-color);
       padding: 1rem;
       margin: 1.5rem 0;
       border-radius: 4px;
       box-shadow: var(--shadow);
+      color: var(--text-color);
     }
 
     .info-box {
-      background-color: #e7f3ff;
+      background-color: rgba(66, 165, 245, 0.15);
       border-left: 4px solid var(--secondary-color);
       padding: 1rem;
       margin: 1.5rem 0;
       border-radius: 4px;
       box-shadow: var(--shadow);
+      color: var(--text-color);
     }
 
     hr {
@@ -240,7 +250,7 @@
       padding: 2rem;
       margin-top: 3rem;
       border-top: 2px solid var(--border-color);
-      color: #666;
+      color: var(--text-secondary);
     }
 
     @media (max-width: 768px) {
