--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       height: auto;
       border-radius: 8px;
       box-shadow: var(--shadow);
-      margin: 1.5rem 0;
+      margin: 1.5rem auto;
       display: block;
       border: 1px solid var(--border-color);
     }
