style: 💄 Change warning `<strong>` color

--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
       margin-top: 0;
     }
 
+    .warning strong {
+      color: var(--warning-color);
+    }
+
     .success {
       background-color: rgba(102, 187, 106, 0.15);
       border-left: 4px solid var(--success-color);
