feat: ✨ Add issue link

--- a/index.html
+++ b/index.html
@@ -721,7 +721,9 @@ sudo apt install esphome</code></pre>
       <div class="success">
         <h2>🎉 Congratulations!</h2>
         <p>You've successfully flashed your Sonoff Slampher v2 and paired it with your Home Assistant instance.</p>
-        <p>If you need any help, feel free to open an issue on this repository or contact me via email at <a
+        <p>If you need any help, feel free to <a
+            href="https://github.com/MisterGoodDeal/sonoff-slampher-v2-esp-home/issues"
+            target="_blank">open an issue</a> on this repository or contact me via email at <a
             href="mailto:mcamus.dev@gmail.com">mcamus.dev@gmail.com</a>.</p>
       </div>
     </div>
